@@ -1,5 +1,7 @@
 ChangeLog
 
+31 Dec 2019: Topo3D/ changed grid downsampling from 4 neighbors to 8 neighbors
+
 30 Nov 2019: added Armand distribution as option for inital velocities in Exosphere/montecarlo.f90
 
 22 Oct 2019: flux -> flux_mars77  in jsub, mars_mapi, mars_mapt2, and fast_subs_mars
